--- a/estilos.css
+++ b/estilos.css
@@ -22,6 +22,13 @@ input::placeholder {
   font-style: italic;
 }
 
+button {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  background-color: #f2f2f2;
+}
+
 
 input {
   border: 1px solid #ccc;
