novas correcoes de css

--- a/estilos.css
+++ b/estilos.css
@@ -27,6 +27,8 @@ button {
   border-radius: 5px;
   box-sizing: border-box;
   background-color: #f2f2f2;
+  font-family: Andale, monospace;
+
 }
 
 
